--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.3",
+		"react-native-datepicker": "^1.6.0",
 		"react-native-prompt": "^1.0.0"
 	},
 	"devDependencies": {
