--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.3",
 		"react-native-datepicker": "^1.6.0",
-		"react-native-prompt": "^1.0.0"
+		"react-native-prompt": "^1.0.0",
+		"realm": "^1.12.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.0.2",
